fix: footer paddingsoff center on mobile

--- a/src/app/components/Footer/Footer.module.scss
+++ b/src/app/components/Footer/Footer.module.scss
@@ -85,6 +85,7 @@
 
 @media (max-width: ohma.$mobileBreakpoint) {
     .Footer {
+        padding: ohma.$gap 2*ohma.$gap;
         grid-template-rows: repeat(auto, 4);
         grid-template-areas: 
             "logos"
@@ -97,6 +98,7 @@
             border-left: none;
         }
         > * {
+            padding: 0;
             margin-top: 5*ohma.$gap;
             display: flex;
             flex-direction: column;
@@ -110,6 +112,7 @@
         }
         p {
             text-align: center;
+            max-width: 400px;
         }
     }
     
